spacing fixed

--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ body {
 .budget__income--percentage,
 .budget__expenses--percentage {
     float: left;
-    width: 45px;
+    width: 40px;
     font-size: 11px;
     padding: 3px 0;
     margin-left: 10px;
@@ -228,7 +228,7 @@ h2 {
     background-color: #FFDAD9;
     padding: 3px;
     border-radius: 3px;
-    width: 45px;
+    width: 40px;
     text-align: center;
     overflow: hidden;
 }
